--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>Hello World</title>
 </head>
 <body>
+
+    <header>
+        <H1>Hello World</H1>
+        <p>Que bom te ver por aqui, Dev!</p>
+
+    </header>
+        
+    <section>
+        <h2>HTML</h2>
+        <P>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web.</P>
+
+        <H2>CSS</H2>
+        <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web.</p>
+
+    </section>
+
+    <footer>
+        <p>Uma página desenvolvida pela Profa. Carla Silveira.</p>
+
+    </footer>
     
 </body>
 </html>
