Adding new file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <H2>CSS</H2>
         <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web.</p>
 
+        <img src="imagem/code.png" alt="Ícone representa codificação ou programação com um par de colchetes angulares em um fundo circular verde" width="320" height="320">
+
     </section>
 
     <footer>
