--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -20,7 +21,7 @@
         <H2>CSS</H2>
         <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web.</p>
 
-        <img src="imagem/code.png" alt="Ícone representa codificação ou programação com um par de colchetes angulares em um fundo circular verde" width="320" height="320">
+        <img src="imagens/code.png" alt="Imagem representa codificação ou programação com um par de colchetes angulares em um fundo circular verde" width="320" height="320">
 
     </section>
 
