Aplicado estilos CSS na página web

--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Programação WEB</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <H1>Hello World</H1>
-        <p>Que bom te ver por aqui, Dev!</p>
+        <H1>Programação Web</H1>
+        <p>Que bom te ver por aqui, <span id="nome-usuario">Dev!</span></p>
+
 
     </header>
         
     <section>
         <h2>HTML</h2>
-        <P>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web.</P>
+        <P>A linguagem de marcação <span class="texto-ingles">Hypertext Markup Language</span> (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web.</P>
 
         <H2>CSS</H2>
-        <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web.</p>
+        <p>A linguagem de estilo <span class="texto-ingles">Cascading Style Sheets </span> (em português, Folha de Estilo em Cascata) estiliza a sua página web.</p>
 
         <img src="imagens/code.png" alt="Imagem representa codificação ou programação com um par de colchetes angulares em um fundo circular verde" width="320" height="320">
 
     </section>
 
     <footer>
-        <p>Uma página desenvolvida pela Profa. Carla Silveira.</p>
+        <p>Uma página desenvolvida por Profa. Carla Silveira.</p>
 
     </footer>
     
