Incluído arquivo main.js

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programação WEB</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    </head>
 <body>
 
     <header>
         <H1>Programação Web</H1>
-        <p>Que bom te ver por aqui, <span id="nome-usuario">Dev!</span></p>
+        <p>Que bom te ver por aqui, <span id="nome-usuario">Dev</span></p>
 
 
     </header>
@@ -30,6 +30,6 @@
         <p>Uma página desenvolvida por Profa. Carla Silveira.</p>
 
     </footer>
-    
+    <script src="main.js"></script>    
 </body>
 </html>
